kube-example-deployment/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: fapi-azure-backend:latest 
        imagePullPolicy: Never
        # kind load docker-image fapi-azure-backend:latest
        # ..jesus: https://iximiuz.com/en/posts/kubernetes-kind-load-docker-image/
        # need to repeat this in every yaml file:
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 80
