kube-example-deployment/db-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: postgres:12
        volumeMounts:
        - name: db-data
          mountPath: /var/lib/postgresql/data/pgdata
      volumes:
      - name: db-data
        persistentVolumeClaim:
          claimName: app-db-data

---

apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  ports:
    - port: 5432
  selector:
    app: db
