kube-example-deployment/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: fapi-azure-frontend:latest 
        imagePullPolicy: Never
        # kind load docker-image fapi-azure-frontend:latest
        # ..jesus: https://iximiuz.com/en/posts/kubernetes-kind-load-docker-image/
        # need to repeat this in every yaml file:
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
